--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.1.3",
+    "@next/third-parties": "^15.1.0",
     "@types/mdx": "^2.0.11",
-    "next": "14.1.1",
+    "next": "^15.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
